--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <section id ="nav-bar">
     <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="C:\Users\user\Desktop\porfolio\images\logo.jpg"></a>
+  <a class="navbar-brand" href="#"><img src="images\logo.JPG"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
