--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/a.JPG" class="d-block w-100" alt="imag2">
+      <img src="images/sk.jpg" class="d-block w-100" alt="imag2">
       <div class="carousel-caption">
           <h5>i love to Design web pages</h5>
       </div>
